...
          icon: const Icon(scrobbleIcon),
          onPressed: _hasItemsToScrobble ? _scrobble : null,
        ),
      ],
    ),
    body: CollapsibleFormView<List<LRecentTracksResponseTrack>>(
      submitButtonText: 'Load Scrobbles',
      onFormSubmit: _loadData,
      formWidgetsBuilder: (_) => [
        ListTileUsernameField(
          controller: _usernameTextController,
          includeSelf: false,
        ),
...
