...
                      decoration: InputDecoration(labelText: 'Album'),
                    ),
                    SwitchListTile(
                      controlAffinity: ListTileControlAffinity.leading,
                      contentPadding: EdgeInsets.zero,
                      activeColor: Colors.red,
                      title: Text('Custom timestamp'),
                      value: _useCustomTimestamp,
                      onChanged: (value) {
                        setState(() {
                          _useCustomTimestamp = value;

                          if (_useCustomTimestamp) {
...
